# Minicraft

./: CMakeLists.txt  README.md  build-debug.bat  build-release.bat  build-x86_debug.bat  build-x86_release.bat
include/blocks/: Dirt.hpp
include/constructs/: Block.hpp  Entity.hpp  GameObject.hpp
include/entities/: Player.hpp
include/interfaces/: IDrawable.hpp  IUpdateable.hpp
include/shapes/: Rectangle.hpp
include/utils/: PerlinNoise.hpp  constants.hpp
include/world_generation/: Chunk.hpp
src/: main.cpp
src/blocks/: Dirt.cpp
src/constructs/: Block.cpp  Entity.cpp  GameObject.cpp
src/entities/: Player.cpp
src/shapes/: Rectangle.cpp
src/utils/: PerlinNoise.cpp
src/world_generation/: Chunk.cpp
